Generate spec version 1.10.0
